kubernetes/apps/glance/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: glance
  namespace: glance
  labels:
    app: glance
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: web
  selector:
    app: glance
